fix code block horizontal scroll

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -5,15 +5,14 @@ pre {
     border-left: $spacer-1 solid $color-border;
     margin: $spacer-3 0;
     padding-left: 16px;
-    width: (9 / 12 * 100%); // matches col-9
     overflow-x: auto;
 }
 
-code {
-    color: $color-code;
-    font-size: $body-font-size;
-    padding: 1px 0px;
-}
+// code {
+//     color: $color-code;
+//     font-size: $body-font-size;
+//     padding: 1px 0px;
+// }
 
 
 .prose {
